[project]
name = "rl-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chex>=0.1.91",
    "distrax>=0.1.7",
    "flax>=0.12.3",
    "jax>=0.9.0.1",
    "optax>=0.2.7",
    "pgx>=2.6.0",
    "pytest>=9.0.2",
    "tyro>=1.0.6",
    "wandb>=0.24.2",
]
